Challenges complete for week 3

--- a/session-03/index.html
+++ b/session-03/index.html
@@ -12,7 +12,7 @@
         <h1>Session 3 Challenge!</h1>
     </header>
     <nav>This is the Site Navigation</nav>
-    <main>This is the main content</main>
-    <footer>This is the footer</footer>
+    <main>This is the Page's Main Content</main>
+    <footer>This is the Site Footer</footer>
 </body>
 </html>
